--- a/views/csvUploadForm.ejs
+++ b/views/csvUploadForm.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/csvUploadForm.css">
-<form action="/upload-csv/<%= user._id %>" method="post" id="uploadForm" enctype="multipart/form-data">
+<form action="/csv/upload-csv/<%= user._id %>" method="post" id="uploadForm" enctype="multipart/form-data">
   <div class="container">
     <h3>CSV UPLOAD FILE</h3>
     <div class="input-container">
